--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.application.name=mediaproject_podservice
+spring.application.name=podservice
 
 server.port=7072
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/leonardodb
+spring.datasource.url=jdbc:mysql://localhost:3306/leonardodb2
 spring.datasource.username=root
 spring.datasource.password=
 
@@ -15,7 +15,7 @@ spring.jpa.defer-datasource-initialization=true
 #spring.sql.init.mode=never
 #spring.jpa.defer-datasource-initialization=false
 
-eureka.instance.appname=PODSERVICE
+eureka.instance.appname=mediaproject_podservice
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.instance.prefer-ip-address=true
 
